|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016 PHP 7.0.3

- Core:
  . Fixed bug #71221 (Null pointer deref (segfault) in get_defined_vars via
    ob_start). (hugh at allthethings dot co dot nz)
  . Fixed bug #71201 (round() segfault on 64-bit builds). (Anatol)
  . Added support for new HTTP 451 code. (Julien)

- CURL:
  . Fixed bug #71225 (curl_setopt() fails to set CURLOPT_POSTFIELDS with
    reference to CURLFile). (Laruence)

- LDAP:
  . Fixed bug #71249 (ldap_mod_replace/ldap_mod_add store value as string
    "Array"). (Laruence)
  
- SPL:
  . Fixed bug #71204 (segfault if clean spl_autoload_funcs while autoloading).
    (Laruence)
  . Fixed bug #71202 (Autoload function registered by another not activated
    immediately). (Laruence)

- Standard:
  . Fixed bug #71264 (file_put_contents() returns unexpected value when 
    filesystem runs full). (Laruence)
  . Fixed bug #71245 (file_get_contents() ignores "header" context option if
    it's a reference). (Laruence)
  . Fixed bug #71220 (Null pointer deref (segfault) in compact via ob_start).
    (hugh at allthethings dot co dot nz)
  . Fixed bug #71190 (substr_replace converts integers in original $search
    array to strings). (Laruence)
  . Fixed bug #71188 (str_replace converts integers in original $search array
    to strings). (Laruence)
  . Fixed bug #70720 (strip_tags improper php code parsing). (Julien)

?? Jan 2016 PHP 7.0.2

- Core:
  . Fixed bug #71165 (-DGC_BENCH=1 doesn't work on PHP7).
    (y dot uchiyama dot 1015 at gmail dot com)
  . Fixed bug #71163 (Segmentation Fault: cleanup_unfinished_calls). (Laruence)
  . Fixed bug #71109 (ZEND_MOD_CONFLICTS("xdebug") doesn't work). (Laruence)
  . Fixed bug #71092 (Segmentation fault with return type hinting). (Laruence)
  . Fixed bug memleak in header_register_callback. (Laruence)
  . Fixed bug #71067 (Local object in class method stays in memory for each
    call). (Laruence)